fixing p element hero header sizings on smaller devices

--- a/src/components/pages/About/AboutHero.css
+++ b/src/components/pages/About/AboutHero.css
@@ -62,7 +62,7 @@
   }
 
   .about-hero-container > p {
-    font-size: 30px;
+    font-size: 20px;
   }
 }
 @media screen and (max-width: 375px) {
